--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,6 @@
 {
     "about": {
-        "info": "Graduated in Cybersecurity in Information Technology Environments with an interest in developing my professional career in software development and cybersecurity.<br><br>I am looking for my first job experience as a developer, currently the technologies I have the most experience in are Python, Django, React, and MySQL, although I am open to training in other technological stacks.",
+        "info": "Graduate in Cybersecurity in Information Technology Environments, with a strong interest in developing my professional career in the fields of software development and cybersecurity.<br><br>I have solid knowledge of Python, Django, React, Pandas, and MySQL, and I am open to learning other tech stacks.",
         "cv": "Download CV"
     },
     "experience": {
