--- a/locales/es.json
+++ b/locales/es.json
@@ -1,6 +1,6 @@
 {
     "about": {
-        "info": "Graduado en Ciberseguridad en Entornos de la Tecnología de la Información con el interés de poder desarrollar mi carrera profesional en el desarrollo de software y la ciberseguridad.<br><br>Busco mi primera experiencia laboral como desarrollador, actualmente las tecnologías en las que tengo mayor nivel son Python, Django, React y MySQL, aunque estoy abierto a formarme en otros stacks tecnológicos.",
+        "info": "Graduado en Ciberseguridad en Entornos de las Tecnologías de la Información, con un gran interés en desarrollar mi carrera profesional en el ámbito del desarrollo de software y la ciberseguridad.<br><br>Cuento con conocimientos sólidos en Python, Django, React, Pandas y MySQL, y estoy abierto a formarme en otros stacks tecnológicos.",
         "cv": "Descargar CV"
     },
     "experience": {
