--- a/locales/en.json
+++ b/locales/en.json
@@ -13,7 +13,7 @@
     "project": {
         "info-1": "An ETL system that performs web scraping to collect, structure, and process data about nuclear plants worldwide.",
         "info-2": "Web application with a REST API using Django REST Framework and React + Vite.",
-        "info-3": "Web application that performs basic CRUD operations using Django.",
+        "info-3": "Django application web designed for workshop management that performs basic CRUD operations.",
         "info-4": "Cybersecurity tool designed for password encryption, decryption of hashes using dictionaries."
     },
     "education": {
