--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,6 @@
 {
     "about": {
-        "info": "Graduate in Cybersecurity in Information Technology Environments, with a strong interest in developing my professional career in the fields of software development and cybersecurity.<br><br>I have solid knowledge of Python, Django, React, Pandas, and MySQL, and I am open to learning other tech stacks.",
+        "info": "Graduated in Cybersecurity in Information Technology Environments with the interest of developing my professional career in software development and cybersecurity. <br><br> I have solid knowledge of Python and experience with technologies such as Django, Pandas, PySpark, React, among others. <br><br> I have participated in the development of web applications, REST APIs, ETL processes, web scraping tools, and cybersecurity-oriented solutions.",
         "cv": "Download CV"
     },
     "experience": {
